genium/src/test/resources/smoke/errors/output/lime/example/FooBar.lime
package example

import smoke.Errors.InternalErrorException
import smoke.SomeTypeCollection.SomeTypeCollectionErrorException

class FooBar {
    static fun methodWithInternalError() throws InternalErrorException
    static fun methodWithTypeCollectionError() throws SomeTypeCollectionErrorException
}
